--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
     font-family: 'Ubuntu', sans-serif;
     font-size: 2.5rem;
     font-weight : bolder;
-    color: black;
+    color: white;
 }
 .nav-item
 {
@@ -22,7 +22,7 @@
 {
     font-size: 1.2rem;
     font-family: "Montserrat-Light";
-    color: black;
+    color: white;
 }
 .main
 {
