--- a/styles.css
+++ b/styles.css
@@ -208,3 +208,10 @@ footer{
     padding-left: 86%;
     padding-top: 3%;
  }
+ .hobbies
+ {
+    font-family: 'Courgette', cursive;
+    color: whitesmoke;
+    padding-left: 41%;
+    padding-top: 4%;
+ }
