--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 }
 
 .picture .links p:hover{
-    color: orangered;
+    color:indianred
 }
 .nav-item
 {
@@ -50,9 +50,47 @@
     background-position:center;
 
 }
+.s1
+{
+    color: whitesmoke;
+    text-align: center;
+    font-family: 'Sacramento', cursive;
+    position: relative;
+    padding-top: 2%;
+    font-size: 68px;
+}
+.para
+{
+    color: whitesmoke;
+    padding-left: 5%;
+    position: relative;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size:25px;
+    width: 43%;
+    padding-top: 5%;
+}
+.about
+{
+    height: 100vh;
+    background-image: url('edb.jpg');
+    position: relative;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position:center;
+   
+}
+.head
+{
+    padding-top: 5%;
+    padding-left: 5%;
+    color: white;
+    font-family: 'Oswald', sans-serif;
+}
 .style_line_1 
 {
-    padding-top: 14%;
+    padding-top: 12%;
     padding-left: 5%;
     font-family: 'Lato', sans-serif;
     font-size: 3.4rem;
@@ -62,7 +100,7 @@
 }
 .row
 {
-    height: 100vh;
+    
     background-image: url('edback.jpg');
     background-repeat: no-repeat;
     background-size: cover;
@@ -76,7 +114,7 @@
 .big-heading
 {
     padding-left: 10%;
-    padding-top: 20%;
+    padding-top: 18%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2rem;
     color:white;
@@ -85,7 +123,7 @@
 }
 .kkr
 {
-    padding-top: 15%;
+    padding-top: 13%;
     padding-left: 9%;
     text-align: center;
     position: relative;
@@ -93,7 +131,7 @@
 .big-heading_2
 {
     padding-left: 0%;
-    padding-top: 20%;
+    padding-top: 18%;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 2rem;
     color:white;
@@ -214,7 +252,21 @@ footer{
     color: white;
     text-decoration: none;
     padding-left: 86%;
-    padding-top: 3%;
+    padding-top: 2.5%;
+ }
+ .top1
+ {
+    color: white;
+    text-decoration: none;
+    padding-left: 88%;
+    padding-top: 10%;
+    padding-bottom: 3%;
+ }
+ .text
+ {
+    color: white;
+    text-decoration: none;
+    
  }
  .hobbies
  {
